--- a/privacy.html
+++ b/privacy.html
@@ -39,7 +39,7 @@
   </ul>
 
   <h2>Droits</h2>
-  <p>Contact : <a href="mailto:julie.cajetta@hotmail.fr">julie.cajetta@hotmail.fr</a></p>
+  <p>Contact : <a href="mailto:jeremytetu.freelance@gmail.com">jeremytetu.freelance@gmail.com</a></p>
 
   <div class="lang">
     <h1>Privacy Policy — Waddle</h1>
@@ -70,7 +70,7 @@
     </ul>
 
     <h2>User Rights</h2>
-    <p>Contact: <a href="mailto:julie.cajetta@hotmail.fr">julie.cajetta@hotmail.fr</a></p>
+    <p>Contact: <a href="mailto:jeremytetu.freelance@gmail.com">jeremytetu.freelance@gmail.com</a></p>
   </div>
 </body>
 </html>
