--- a/fr/terms.html
+++ b/fr/terms.html
@@ -192,8 +192,7 @@
 
         <section id="contact">
           <h2>15. Contact</h2>
-          <p>Pour toute question : <a href="mailto:support@waddle.app">support@waddle.app</a></p>
-          <p>Adresse postale (remplacer par la tienne le cas échéant) : <em>Waddle — Service Client, [Votre adresse complète]</em></p>
+          <p>Pour toute question : <a href="mailto:contact@waddle.fr">contact@waddle.fr</a></p>
         </section>
 
         <hr style="margin:28px 0;border:none;border-top:1px solid var(--border)" />
