--- a/fr/terms.html
+++ b/fr/terms.html
@@ -156,7 +156,7 @@
 
         <section id="confidentialite">
           <h2>9. Données personnelles & confidentialité</h2>
-          <p>Nos pratiques de collecte et de traitement de données sont décrites dans notre <a href="https://waddle.app/privacy" target="_blank" rel="noopener">Politique de confidentialité</a>. En utilisant Waddle, vous consentez aux traitements nécessaires à la fourniture du service, dans les conditions décrites.</p>
+          <p>Nos pratiques de collecte et de traitement de données sont décrites dans notre <a href="https://github.com/Jeremytetu/WaddlePublic/blob/main/fr/privacy.html" target="_blank" rel="noopener">Politique de confidentialité</a>. En utilisant Waddle, vous consentez aux traitements nécessaires à la fourniture du service, dans les conditions décrites.</p>
           <p>Vous disposez de droits (accès, rectification, effacement, opposition, etc.) dans les limites prévues par la loi applicable. Les modalités d’exercice figurent dans la Politique de confidentialité.</p>
         </section>
 
