--- a/en/terms.html
+++ b/en/terms.html
@@ -141,7 +141,7 @@
 
         <section id="privacy">
           <h2>9. Privacy</h2>
-          <p>Our data practices are described in our <a href="https://waddle.app/privacy" target="_blank" rel="noopener">Privacy Policy</a>. By using Waddle, you consent to the processing necessary to provide the service as described therein.</p>
+          <p>Our data practices are described in our <a href="https://github.com/Jeremytetu/WaddlePublic/blob/main/en/privacy.html" target="_blank" rel="noopener">Privacy Policy</a>. By using Waddle, you consent to the processing necessary to provide the service as described therein.</p>
         </section>
 
         <section id="conduct">
