--- a/fr/privacy.html
+++ b/fr/privacy.html
@@ -89,7 +89,7 @@
       <article class="card">
         <section id="identite">
           <h2>1. Qui est responsable&nbsp;?</h2>
-          <p>Le responsable du traitement est : <strong>Waddle</strong> (<em>[dénomination légale si différente]</em>), dont le siège social est situé à <em>[Adresse complète]</em>. Courriel : <a href="mailto:support@waddle.app">support@waddle.app</a>.</p>
+          <p>Le responsable du traitement est : <strong>Waddle</strong> (<em>NexOps Consulting</em>), dont le siège social est situé à <em>Pegomas</em>. Courriel : <a href="mailto:contactt@waddle.fr">contact@waddle.fr</a>.</p>
           <p>Si vous avez nommé un délégué à la protection des données (DPO) : <em>[Nom du DPO, contact]</em>. À défaut, adressez vos demandes à l’adresse ci-dessus.</p>
         </section>
 
