--- a/fr/privacy.html
+++ b/fr/privacy.html
@@ -89,8 +89,7 @@
       <article class="card">
         <section id="identite">
           <h2>1. Qui est responsable&nbsp;?</h2>
-          <p>Le responsable du traitement est : <strong>Waddle</strong> (<em>NexOps Consulting</em>), dont le siège social est situé à <em>Pegomas</em>. Courriel : <a href="mailto:contactt@waddle.fr">contact@waddle.fr</a>.</p>
-          <p>Si vous avez nommé un délégué à la protection des données (DPO) : <em>[Nom du DPO, contact]</em>. À défaut, adressez vos demandes à l’adresse ci-dessus.</p>
+          <p>Le responsable du traitement est : <strong>Jeremy TETU</strong> (<em>NexOps Consulting</em>), dont le siège social est situé à <em>Pegomas</em>. Courriel : <a href="mailto:contactt@waddle.fr">contact@waddle.fr</a>.</p>
         </section>
 
         <section id="portee">
