--- a/en/privacy.html
+++ b/en/privacy.html
@@ -75,8 +75,7 @@
       <article class="card">
         <section id="who">
           <h2>1. Who is responsible?</h2>
-          <p>The data controller is <strong>Waddle</strong> (<em>[legal entity if different]</em>), registered office at <em>[Full address]</em>. Email: <a href="mailto:support@waddle.app">support@waddle.app</a>.</p>
-          <p>If you have appointed a Data Protection Officer (DPO): <em>[DPO name, contact]</em>. Otherwise, please use the contact above.</p>
+          <p>The data controller is <strong>Jeremy TETU</strong> (<em>NexOps Consulting</em>), registered office at <em>Pegomas</em>. Email: <a href="mailto:contact@waddle.fr">contact@waddle.fr</a>.</p>
         </section>
 
         <section id="scope">
