--- a/fr/privacy.html
+++ b/fr/privacy.html
@@ -94,7 +94,7 @@
 
         <section id="portee">
           <h2>2. Portée de la politique</h2>
-          <p>Cette politique s’applique à l’application mobile Waddle, à nos sites web associés (ex. <code>waddle.app</code>) et aux services connexes (support, notifications, abonnements).</p>
+          <p>Cette politique s’applique à l’application mobile Waddle, à nos sites web associés (ex. <code>waddle.fr</code>) et aux services connexes (support, notifications, abonnements).</p>
         </section>
 
         <section id="donnees">
@@ -171,7 +171,7 @@
 
         <section id="droits">
           <h2>10. Vos droits (RGPD)</h2>
-          <p>Vous pouvez exercer : droit d’accès, rectification, effacement, limitation, opposition, portabilité, et, le cas échéant, retrait du consentement. Pour cela, contactez-nous à <a href="mailto:support@waddle.app">support@waddle.app</a> en précisant votre demande et l’adresse liée au compte.</p>
+          <p>Vous pouvez exercer : droit d’accès, rectification, effacement, limitation, opposition, portabilité, et, le cas échéant, retrait du consentement. Pour cela, contactez-nous à <a href="mailto:contact@waddle.fr">contact@waddle.fr</a> en précisant votre demande et l’adresse liée au compte.</p>
           <p>Vous pouvez également définir des directives sur le sort de vos données après votre décès lorsque la loi locale le permet.</p>
         </section>
 
