--- a/en/privacy.html
+++ b/en/privacy.html
@@ -80,7 +80,7 @@
 
         <section id="scope">
           <h2>2. Scope</h2>
-          <p>This Policy applies to the Waddle mobile app, our websites (e.g., <code>waddle.app</code>), and related services (support, notifications, subscriptions).</p>
+          <p>This Policy applies to the Waddle mobile app, our websites (e.g., <code>waddle.fr</code>), and related services (support, notifications, subscriptions).</p>
         </section>
 
         <section id="data">
@@ -157,7 +157,7 @@
 
         <section id="rights">
           <h2>10. Your rights (GDPR)</h2>
-          <p>You may exercise: access, rectification, erasure, restriction, objection, portability, and where applicable, withdraw consent. Contact us at <a href="mailto:support@waddle.app">support@waddle.app</a> and include your request and the email tied to your account.</p>
+          <p>You may exercise: access, rectification, erasure, restriction, objection, portability, and where applicable, withdraw consent. Contact us at <a href="mailto:contact@waddle.fr">contact@waddle.fr</a> and include your request and the email tied to your account.</p>
           <p>You may also set instructions for your data after death where local law provides.</p>
         </section>
 
