--- a/en/privacy.html
+++ b/en/privacy.html
@@ -164,7 +164,7 @@
         <section id="cookies">
           <h2>11. Cookies & trackers</h2>
           <p><strong>Mobile app</strong>: no browser cookies, but technical identifiers may be used for login, security, notifications, or usage measurement (per Apple/Google rules). Manage certain preferences in your OS (notifications, ad identifier).</p>
-          <p><strong>Website</strong>: if analytics/audience cookies are used, they have limited durations and, where required, rely on your consent via a preference banner. You can change your choices at any time (<em>[link to cookie preferences center]</em>).</p>
+          <!--<p><strong>Website</strong>: if analytics/audience cookies are used, they have limited durations and, where required, rely on your consent via a preference banner. You can change your choices at any time (<em>[link to cookie preferences center]</em>).</p>-->
         </section>
 
         <section id="children">
