--- a/fr/privacy.html
+++ b/fr/privacy.html
@@ -178,7 +178,7 @@
         <section id="cookies">
           <h2>11. Cookies & traceurs</h2>
           <p><strong>Application mobile</strong> : pas de cookies au sens navigateur, mais des identifiants techniques peuvent être utilisés pour la connexion, la sécurité, les notifications ou la mesure d’usage (conforme aux règles Apple/Google). Vous pouvez gérer certains consentements dans l’app ou dans les réglages de l’OS (notifications, identifiant publicitaire).</p>
-          <p><strong>Site web</strong> : si des cookies analytiques/mesure d’audience sont utilisés, ils sont configurés avec une durée limitée et, lorsque requis, soumis à votre consentement via un bandeau de choix. Vous pouvez modifier vos préférences à tout moment (<em>[lien vers le centre de préférences cookies]</em>).</p>
+          <!--<p><strong>Site web</strong> : si des cookies analytiques/mesure d’audience sont utilisés, ils sont configurés avec une durée limitée et, lorsque requis, soumis à votre consentement via un bandeau de choix. Vous pouvez modifier vos préférences à tout moment (<em>[lien vers le centre de préférences cookies]</em>).</p>-->
         </section>
 
         <section id="enfants">
